2002-04-09	Thomas Krennwallner <krennwallner@aon.at>

	* src/net.{c,h}: add support for resolving names
	* src/macfile.{c,h}: add support for domain names
	* src/wol.c: add support for domain names
	* src/wol-dhcpdconf.in: add support for domain names
	* src/wol-bootptab.in: add support for parsing bootptab
	* configure.ac: create wol-bootptab
	* src/Makefile.am: add wol-bootptab to bin_SCRIPTS

2002-04-08	Thomas Krennwallner <krennwallner@aon.at>

	* po/fr.po: fix untranslated messages

2002-04-04	Thomas Krennwallner <krennwallner@aon.at>

	* doc/wol.texi: remove trademark info

2002-04-03	Thomas Krennwallner <krennwallner@aon.at>

	* check/nicfake.py: fixes

2002-04-02	Thomas Krennwallner <krennwallner@aon.at>

	* check/Makefile.am: check testsuite Makefile
	* check/nic-fake.py: test script
	* check/test{1,2,3}.sh: test suites

2002-03-28	Thomas Krennwallner <krennwallner@aon.at>

	* doc/wol.texi: improvements

2002-03-27	Thomas Krennwallner <krennwallner@aon.at>

	* doc/texi2pod.pl: added
	* doc/wol.texi: include changes for manpage creation, direntry fix
	* doc/Makefile.am: add wol.1 to EXTRA_DIST
	* po/it.po: fixes and improvements
	* doc/Makefile.am: rm wol.pod on make clean
	* debian: initial debianisation ;-)

2002-03-25	Thomas Krennwallner <krennwallner@aon.at>

	* configure.ac: schedule 0.6.1
	* release 0.6.0
	* src/macfile.c: whale should be size_t, not ssize_t -> fixed

2002-03-21	Thomas Krennwallner <krennwallner@aon.at>

	* doc/wol.texi: add how a magic packet looks like
	* doc/Makefile.am: add stuff for making wol.pdf and wol.html

2002-03-20	Thomas Krennwallner <krennwallner@aon.at>

	* m4/error.m4: added
	* lib/error.{c,h}: GNU error added
	* configure.ac: jm_PREREQ_ERROR
	* src/wol.c: GNU error needs global program_name symbol -> rename name
		to program_name and destatic it ;-)
	* lib/getline.c: fixed return values (int != ssize_t on
		alphaev67-unknown-linux-gnu)
	* doc/wol.texi: fixes
	* src/wol.c: use error() instead of fprintf(stderr, ...)